# the-c-programming-language

./: CMakeLists.txt  README.md  hello.c  hello.h  main.c
1.1 Getting Started/: Hello.c  Hello.h
1.2 Variables and Arithmetic Expressions/CelsiusFahrenheitWhile/: CelsiusFahrenheitWhile.c  CelsiusFahrenheitWhile.h
1.2 Variables and Arithmetic Expressions/FahrenheitCelsiusWhile/: FahrenheitCelsiusWhile.c  FahrenheitCelsiusWhile.h
1.3 The For Statement/FahrenheitToCelsiusFor/: FahrenheitToCelsiusFor.c  FahrenheitToCelsiusFor.h
1.3 The For Statement/FahrenheitToCelsiusForReverse/: FahrenheitToCelsiusForReverse.c  FahrenheitToCelsiusForReverse.h
1.4 Symbolic Constants/FahrenheitToCelsiusForConstants/: FahrenheitToCelsiusForConstants.c  FahrenheitToCelsiusForConstants.h
